Fix main-menu scrolling/overflow for Safari
[ci skip]

--- a/app/assets/stylesheets/layout/_main_menu.sass
+++ b/app/assets/stylesheets/layout/_main_menu.sass
@@ -47,7 +47,7 @@ $toggler-width: 40px
   %absolute-layout-mode &
     position: relative
     // In WP list, the footer is just a 5px border:
-    min-height: calc(100vh - 55px - 5px)
+    height: calc(100vh - 55px - 5px)
 
     #menu-sidebar
       +allow-vertical-scrolling
